# netbox-compliance

./: .gitignore  LICENSE  MANIFEST.in  README.md  compliance-plugin-naming-conventions.md  pyproject.toml
netbox_compliance/: __init__.py  choices.py  dashboard.py  filtersets.py  navigation.py  services.py  signals.py  template_content.py  urls.py
netbox_compliance/api/: serializers.py  urls.py  views.py
netbox_compliance/api/serializers_/: assignments.py  exemptions.py  measures.py  results.py  snapshots.py
netbox_compliance/forms/: __init__.py  filters.py  models.py
netbox_compliance/jobs/: __init__.py  generate_snapshots.py
netbox_compliance/management/commands/: generate_compliance_snapshots.py  import_results_from_custom_fields.py  prune_compliance_results.py  validate_software_version_results.py
netbox_compliance/migrations/: 0001_initial.py  0002_typed_measures_panel.py  0003_add_measure_title.py
netbox_compliance/models/: __init__.py  assignments.py  exemptions.py  measures.py  results.py  snapshots.py
netbox_compliance/tables/: assignments.py  exemptions.py  measures.py  results.py  snapshots.py
netbox_compliance/tests/: base.py  custom.py  test_api.py  test_bulk_assign.py  test_management_commands.py  test_models.py  test_panel.py  test_services.py  test_snapshots.py  test_software_version.py  test_typed_measures.py  test_validate_software_version_results.py
netbox_compliance/views/: __init__.py  assignments.py  device.py  exemptions.py  measures.py  reports.py  results.py  snapshots.py
testing/: configuration.testing.py
(+14 files in other folders)
